# AwesomeWallpaper

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/kernel/: WindowsApi.cpp  WindowsApi.h
src/resources/: resource.h  resource.rc
src/windows/: Application.cpp  Application.h  ConfigurationWindow.cpp  ConfigurationWindow.h
src/windows/controls/: Button.cpp  Button.h  TrayIcon.cpp  TrayIcon.h
